--- a/package.json
+++ b/package.json
@@ -28,40 +28,42 @@
     ]
   },
   "dependencies": {
-    "@nestjs/common": "^5.0.0",
-    "@nestjs/core": "^5.0.0",
-    "@nestjs/swagger": "^2.2.0",
-    "@nestjs/websockets": "^5.1.0",
-    "@types/node-json-db": "^0.0.1",
-    "fastify-formbody": "^2.0.0",
-    "node-json-db": "^0.7.5",
-    "reflect-metadata": "^0.1.12",
-    "rxjs": "^6.0.0",
-    "typescript": "^2.6.2"
+    "@nestjs/common": "7.4.4",
+    "@nestjs/core": "7.4.4",
+    "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/swagger": "4.6.0",
+    "@nestjs/websockets": "7.4.4",
+    "fastify-formbody": "5.0.0",
+    "node-json-db": "1.1.0",
+    "reflect-metadata": "0.1.13",
+    "rxjs": "6.6.2",
+    "swagger-ui-express": "^4.1.4",
+    "typescript": "4.0.2"
   },
   "devDependencies": {
-    "@nestjs/testing": "^5.1.0",
-    "@types/express": "^4.0.39",
-    "@types/jest": "^21.1.8",
-    "@types/node": "^9.3.0",
-    "@types/socket.io": "^1.4.37",
-    "@types/supertest": "^2.0.4",
-    "husky": "^1.0.0-rc.12",
-    "jest": "^21.2.1",
-    "lint-staged": "^7.2.0",
-    "nodemon": "^1.14.1",
-    "prettier": "^1.11.1",
-    "pretty-quick": "^1.6.0",
-    "pure-ts": "^0.10.2",
-    "supertest": "^3.0.0",
-    "ts-jest": "^21.2.4",
-    "ts-loader": "^4.1.0",
-    "ts-node": "^4.1.0",
-    "tsconfig-paths": "^3.1.1",
+    "@nestjs/testing": "7.4.4",
+    "@types/express": "4.17.8",
+    "@types/jest": "26.0.12",
+    "@types/node": "14.6.2",
+    "@types/socket.io": "^2.1.11",
+    "@types/supertest": "2.0.10",
+    "class-validator": "^0.12.2",
+    "husky": "4.2.5",
+    "jest": "26.4.2",
+    "lint-staged": "10.2.13",
+    "nodemon": "2.0.4",
+    "prettier": "2.1.1",
+    "pretty-quick": "3.0.0",
+    "pure-ts": "0.10.2",
+    "supertest": "4.0.2",
+    "ts-jest": "26.3.0",
+    "ts-loader": "8.0.3",
+    "ts-node": "9.0.0",
+    "tsconfig-paths": "3.9.0",
     "tslint": "5.3.2",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-node-externals": "^1.6.0"
+    "webpack": "4.44.1",
+    "webpack-cli": "3.3.12",
+    "webpack-node-externals": "2.5.2"
   },
   "jest": {
     "moduleFileExtensions": [
