--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/common": "7.4.4",
     "@nestjs/core": "7.4.4",
     "@nestjs/platform-express": "^7.4.4",
+    "@nestjs/platform-socket.io": "^7.4.4",
     "@nestjs/swagger": "4.6.0",
     "@nestjs/websockets": "7.4.4",
     "fastify-formbody": "5.0.0",
