--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   },
   "lint-staged": {
     "*.ts": [
-      "tslint --fix",
-      "git add"
+      "tslint --fix"
     ]
   },
   "dependencies": {
